<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivityReturnAsset">

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/tamanhoLayout"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/labelCodigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margemSpace"
        android:layout_marginStart="@dimen/margemSpace"
        android:text="@string/labelCodigoAsset"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="@font/ubuntu_mono" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtCodigoAsset"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margemSpace"
            android:layout_marginLeft="@dimen/margemSpace"
            android:ems="10"
            android:hint="@string/txtCodigoAsset"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:fontFamily="@font/ubuntu_mono"
            tools:targetApi="o" />

        <Button
            android:id="@+id/btnLeitorCodigo"
            android:layout_width="47dp"
            android:layout_height="43dp"
            android:background="@drawable/img_leitor_codigo"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnTransferir"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@color/colorPrimary"
            android:text="@string/btnTransferir"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textStyle="bold"
            android:visibility="invisible"
            app:fontFamily="@font/ubuntu_mono" />

    </RelativeLayout>

</LinearLayout>